data/derived/comb/progs/unify/prog6662.ml.out
Characters 70-76:
  in if c'= true then wwhile (f b')
                             ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('a -> 'a * bool) * 'a
